--- a/template/core-dist/src/index.html
+++ b/template/core-dist/src/index.html
@@ -24,6 +24,7 @@
   <meta name="msapplication-TileImage" content="/assets/favicons/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://cdn.auth0.com/js/lock/10.8/lock.min.js"></script>
 
   <style>
     app-root > .background {
