working login/logout

--- a/template/core-dist/src/app/navigation/topnav/topnav.component.html
+++ b/template/core-dist/src/app/navigation/topnav/topnav.component.html
@@ -24,7 +24,7 @@
     <button md-menu-item> Refresh</button>
     <button md-menu-item> Settings</button>
     <button md-menu-item> Help</button>
-    <button md-menu-item disabled> Sign Out</button>
+    <button md-menu-item (click)="logout()"> Sign Out</button>
   </md-menu>
   <md-toolbar-row *ngIf="_navigation.mediumScreenAndDown && _breadcrumbs.length > 0 && !_autoBreadcrumbs">
     <span class="breadcrumb-holder">
