Add SixCRM branding: 1. add logo to left navbar 2. add favicon 3. change app title 4. remove unnecessary starter assests

--- a/template/core-dist/src/app/navigation/sidenav/sidenav.component.html
+++ b/template/core-dist/src/app/navigation/sidenav/sidenav.component.html
@@ -1,6 +1,5 @@
 <md-toolbar color="primary">
-  <img src="/assets/images/logo-inverse.png" class="logo">
-   &nbsp;CoreNG
+  <img src="/assets/images/logo.svg" class="logo">
 </md-toolbar>
 <md-nav-list class="side-navigation" [ngStyle]="{'height': height}">
   <c-sidenav-item *ngFor="let menuItem of menuItems" [menuItem]="menuItem" [parent]="_this"></c-sidenav-item>
