Add profile image instead of auth0 logo to profile menu.

--- a/template/core-dist/src/app/navigation/topnav/topnav.component.html
+++ b/template/core-dist/src/app/navigation/topnav/topnav.component.html
@@ -17,7 +17,7 @@
 
   <span class="app-flex-filler"></span>
     <button md-icon-button [md-menu-trigger-for]="menu" id="user-dropdown-toggler">
-    <img class="topnav__dropdown__image" src="https://cdn.auth0.com/styleguide/latest/lib/logos/img/logo-grey.png">
+    <img class="topnav__dropdown__image" [src]="_userProfile.picture">
   </button>
 
   <md-menu #menu="mdMenu" x-position="before">
