--- a/template/core-dist/src/app/pages/profile-page/profile-page.component.scss
+++ b/template/core-dist/src/app/pages/profile-page/profile-page.component.scss
@@ -1,3 +1,19 @@
 .profile-page {
-  text-align: center;
+  margin-left: 30px;
+
+  &__image {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+  }
+
+  &__input {
+    display: block;
+    margin-top: 40px;
+    width: 300px;
+  }
+
+  &__buttons {
+    margin-top: 40px;
+  }
 }
