--- a/template/core-dist/src/app/pages/campaigns-page/campaigns.component.scss
+++ b/template/core-dist/src/app/pages/campaigns-page/campaigns.component.scss
@@ -12,7 +12,22 @@
 }
 
 .campaigns__table {
-  &__action {
-    cursor: pointer;
+  &__header {
+
+    tr th {
+      width: 30%;
+    }
+    &__actions {
+      width: 10%;
+    }
+  }
+
+  &__body {
+    font-size: 0;
+
+    &__action {
+      width: 45%;
+      cursor: pointer;
+    }
   }
 }
