--- a/template/core-dist/src/app/pages/products-page/products.component.html
+++ b/template/core-dist/src/app/pages/products-page/products.component.html
@@ -1,3 +1,28 @@
-<p>
-  products works!
-</p>
+<div class="products__search">
+  <md-input placeholder="search" [(ngModel)]="searchString" [formControl]="productsSearchControl"></md-input>
+  <button md-raised-button color="primary" (click)="search()">search</button>
+</div>
+
+<table class="highlight">
+  <thead class="products__table__header">
+  <tr>
+    <th data-field="id">ID</th>
+    <th data-field="name">Name</th>
+    <th data-field="price">SKU</th>
+    <th class="products__table__header__actions">Actions</th>
+  </tr>
+  </thead>
+
+  <tbody>
+  <tr *ngFor="let product of products">
+    <td>{{product.id}}</td>
+    <td>{{product.name}}</td>
+    <td>{{product.sku}}</td>
+    <td>
+      <md-icon class="products__table__body__action" (click)="editProductModal(product)">mode_edit</md-icon>
+      <md-icon class="products__table__body__action" (click)="deleteProduct(product)">delete</md-icon>
+    </td>
+  </tr>
+  </tbody>
+
+</table>
