--- a/template/core-dist/src/app/pages/campaigns-page/campaigns.component.scss
+++ b/template/core-dist/src/app/pages/campaigns-page/campaigns.component.scss
@@ -14,19 +14,13 @@
 .campaigns__table {
   &__header {
 
-    tr th {
-      width: 30%;
-    }
-    &__actions {
-      width: 10%;
-    }
   }
 
   &__body {
     font-size: 0;
 
     &__action {
-      width: 45%;
+      margin-right: 5px;
       cursor: pointer;
     }
   }
