--- a/template/core-dist/src/app/pages/campaigns-page/campaigns.component.html
+++ b/template/core-dist/src/app/pages/campaigns-page/campaigns.component.html
@@ -4,7 +4,7 @@
 </div>
 
 <table class="highlight">
-  <thead class="campaigns__table__header">
+  <thead class="entities__table__header">
   <tr>
     <th data-field="id">Name</th>
     <th data-field="numOfMerchProviders">Number of Merchant Providers</th>
@@ -19,9 +19,9 @@
     <td>{{campaign.loadBalancer.merchantProviderConfigurations.length}}</td>
     <td>{{campaign.productSchedules.length}}</td>
     <td>
-      <md-icon class="campaigns__table__body__action" (click)="viewCampaign(campaign)">visibility</md-icon>
-      <md-icon class="campaigns__table__body__action" (click)="editCampaign(campaign)">mode_edit</md-icon>
-      <md-icon class="campaigns__table__body__action" (click)="deleteCampaign(campaign)">delete</md-icon>
+      <md-icon class="entities__table__body__action" (click)="viewCampaign(campaign)">visibility</md-icon>
+      <md-icon class="entities__table__body__action" (click)="editCampaign(campaign)">mode_edit</md-icon>
+      <md-icon class="entities__table__body__action" (click)="deleteCampaign(campaign)">delete</md-icon>
     </td>
   </tr>
   </tbody>
