--- a/template/core-dist/src/app/pages/merchant-providers-page/merchant-providers.component.html
+++ b/template/core-dist/src/app/pages/merchant-providers-page/merchant-providers.component.html
@@ -6,16 +6,18 @@
 <table class="highlight">
   <thead class="entities__table__header">
   <tr>
-    <th data-field="id">Username</th>
-    <th data-field="numOfMerchProviders">Password</th>
-    <th data-field="numOfProdSchedules">Endpoint</th>
-    <th data-field="numOfProdSchedules">Processor</th>
+    <th data-field="name">Name</th>
+    <th data-field="username">Username</th>
+    <th data-field="password">Password</th>
+    <th data-field="endpoint">Endpoint</th>
+    <th data-field="processor">Processor</th>
     <th>Actions</th>
   </tr>
   </thead>
 
   <tbody>
   <tr *ngFor="let merchantProvider of merchantProviders">
+    <td>{{merchantProvider.name}}</td>
     <td>{{merchantProvider.username}}</td>
     <td>{{merchantProvider.password}}</td>
     <td>{{merchantProvider.endpoint}}</td>
