--- a/template/core-dist/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-view.component.html
+++ b/template/core-dist/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-view.component.html
@@ -5,6 +5,9 @@
       <md-input disabled placeholder="ID" value="{{merchantProvider.id}}"></md-input>
     </div>
     <div>
+      <md-input disabled placeholder="Name" value="{{merchantProvider.name}}"></md-input>
+    </div>
+    <div>
       <md-input disabled placeholder="Username" value="{{merchantProvider.username}}"></md-input>
     </div>
     <div>
