--- a/template/core-dist/src/app/pages/fulfillment-providers/fulfillment-providers.component.html
+++ b/template/core-dist/src/app/pages/fulfillment-providers/fulfillment-providers.component.html
@@ -23,9 +23,9 @@
     <td>{{fulfillmentProvider.endpoint}}</td>
     <td>{{fulfillmentProvider.provider}}</td>
     <td>
-      <md-icon class="entities__table__body__action" (click)="viewFulfillmentProvider(fulfillmentProvider)">visibility</md-icon>
-      <md-icon class="entities__table__body__action" (click)="editFulfillmentProvider(fulfillmentProvider)">mode_edit</md-icon>
-      <md-icon class="entities__table__body__action" (click)="deleteFulfillmentProvider(fulfillmentProvider)">delete</md-icon>
+      <md-icon class="entities__table__body__action" (click)="viewEntity(fulfillmentProvider.id)">visibility</md-icon>
+      <md-icon class="entities__table__body__action" (click)="editEntity(fulfillmentProvider)">mode_edit</md-icon>
+      <md-icon class="entities__table__body__action" (click)="deleteEntity(fulfillmentProvider.id)">delete</md-icon>
     </td>
   </tr>
   </tbody>
