--- a/template/core-dist/src/app/pages/customers-page/customers.component.html
+++ b/template/core-dist/src/app/pages/customers-page/customers.component.html
@@ -1,3 +1,31 @@
-<p>
-  customers works!
-</p>
+<div class="campaigns__search">
+  <md-input placeholder="search"></md-input>
+  <button md-raised-button color="primary" (click)="search()">search</button>
+</div>
+
+<table class="highlight">
+  <thead class="entities__table__header">
+  <tr>
+    <th data-field="firstName">First Name</th>
+    <th data-field="lastName">Last Name</th>
+    <th data-field="city">City</th>
+    <th data-field="country">Country</th>
+    <th>Actions</th>
+  </tr>
+  </thead>
+
+  <tbody>
+  <tr *ngFor="let customer of customers">
+    <td>{{customer.firstName}}</td>
+    <td>{{customer.lastName}}</td>
+    <td>{{customer.address.city}}</td>
+    <td>{{customer.address.country}}</td>
+    <td>
+      <md-icon class="entities__table__body__action" (click)="viewEntity(customer.id)">visibility</md-icon>
+      <md-icon class="entities__table__body__action" (click)="editEntity(customer)">mode_edit</md-icon>
+      <md-icon class="entities__table__body__action" (click)="deleteEntity(customer.id)">delete</md-icon>
+    </td>
+  </tr>
+  </tbody>
+
+</table>
