--- a/template/core-dist/src/assets/scss/_forms.scss
+++ b/template/core-dist/src/assets/scss/_forms.scss
@@ -1,7 +1,27 @@
-.md-input-underline .md-input-ripple {
-  background-color: $brand-primary !important;
+.content {
+
+  &__block {
+    &__first {
+      margin-top: 30px
+    }
+
+    &__second {
+      margin-top: 20px;
+      margin-left: 10px;
+    }
+
+    &__third {
+      margin-top: 15px;
+      margin-left: 20px;
+    }
+
+    &__fourth {
+      margin-top: 10px;
+      margin-left: 30px;
+    }
+  }
 }
 
-.md-input-placeholder.md-focused {
-  color: $brand-primary !important;
+md-input {
+  margin: 0 5px 0 5px;
 }
