--- a/template/core-dist/src/styles.scss
+++ b/template/core-dist/src/styles.scss
@@ -6,6 +6,7 @@
 @import "assets/scss/_typography.scss";
 @import "assets/scss/_cards.scss";
 @import "assets/scss/_tables.scss";
+@import "assets/scss/_forms.scss";
 
 /***************
   HTML Styles
