--- a/template/core-dist/src/app/pages/transactions-page/transactions.component.html
+++ b/template/core-dist/src/app/pages/transactions-page/transactions.component.html
@@ -1,3 +1,31 @@
-<p>
-  transactions works!
-</p>
+<div class="campaigns__search">
+  <md-input placeholder="search" ></md-input>
+  <button md-raised-button color="primary" (click)="search()">search</button>
+</div>
+
+<table class="highlight">
+  <thead class="entities__table__header">
+  <tr>
+    <th data-field="id">ID</th>
+    <th data-field="data">Date</th>
+    <th data-field="amount">Amount</th>
+    <th data-field="processorResponse">Processor Response</th>
+    <th>Actions</th>
+  </tr>
+  </thead>
+
+  <tbody>
+  <tr *ngFor="let transaction of transactions">
+    <td>{{transaction.id}}</td>
+    <td>{{transaction.date}}</td>
+    <td>{{transaction.amount}}</td>
+    <td>{{transaction.processorResponse.message}}</td>
+    <td>
+      <md-icon class="entities__table__body__action" (click)="viewEntity(transaction.id)">visibility</md-icon>
+      <md-icon class="entities__table__body__action" (click)="editEntity(transaction)">mode_edit</md-icon>
+      <md-icon class="entities__table__body__action" (click)="deleteEntity(transaction.id)">delete</md-icon>
+    </td>
+  </tr>
+  </tbody>
+
+</table>
