--- a/template/core-dist/src/styles.scss
+++ b/template/core-dist/src/styles.scss
@@ -7,6 +7,7 @@
 @import "assets/scss/_cards.scss";
 @import "assets/scss/_tables.scss";
 @import "assets/scss/_forms.scss";
+@import "assets/scss/_entity-index.scss";
 
 /***************
   HTML Styles
