--- a/template/core-dist/src/app/navigation/topnav/topnav.component.scss
+++ b/template/core-dist/src/app/navigation/topnav/topnav.component.scss
@@ -2,8 +2,23 @@
   display: block;
 }
 
-.topnav__dropdown__image {
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
+.topnav__dropdown {
+  &__image {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  &__menu {
+    position: absolute;
+    top: 60px;
+    right: 15px;
+    z-index: 1000;
+    background-color: white;
+    box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+  }
 }
